fix double scroll issue

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-listing-panel/dot-pages-listing-panel.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-listing-panel/dot-pages-listing-panel.component.scss
@@ -1,5 +1,10 @@
 @use "variables" as *;
 
+:host {
+    flex-grow: 1;
+    margin-bottom: $spacing-4;
+}
+
 ::ng-deep {
     .p-datatable .p-datatable-tbody tr td {
         white-space: nowrap;
